@@ -1,7 +1,6 @@
-from typing import Callable, Union
+from typing import Callable, Optional
 
 import numpy as np
-from numpy.typing import ArrayLike
 from sklearn.base import BaseEstimator
 from tqdm import tqdm
 
@@ -34,19 +33,19 @@ class QuickShift(BaseEstimator):
     scale : float, default=1.0
         Distance cutoff scaling factor used during the QS clustering. It will be squared
         since the squared distance is used in this class.
-    metric : Callable[[ArrayLike, ArrayLike, bool, dict], ArrayLike], \
-        default= :func:`skmatter.metrics.pairwise_euclidean_distances()`
+    metric : Callable, default=None
         The metric to use. Your metric should be able to take at least three arguments
         in secquence: `X`, `Y`, and `squared=True`. Here, `X` and `Y` are two array-like
         of shape (n_samples, n_components). The return of the metric is an array-like of
         shape (n_samples, n_samples). If you want to use periodic boundary
         conditions, be sure to provide the cell length in the ``metric_params`` and
-        provide a metric that can take the cell argument.
+        provide a metric that can take the cell argument. If :obj:`None`, the
+        :func:`skmatter.metrics.periodic_pairwise_euclidean_distances()` is used.
     metric_params : dict, default=None
         Additional parameters to be passed to the use of
         metric.  i.e. the dimension of a rectangular cell of side length :math:`a_i`
-        for :func:`skmatter.metrics.pairwise_euclidean_distances()`
-        `{'cell_length': [a_1, a_2, ..., a_n]}`
+        for :func:`skmatter.metrics.periodic_pairwise_euclidean_distances()`
+        ``{'cell_length': [a_1, a_2, ..., a_n]}``
 
     Attributes
     ----------
@@ -97,13 +96,11 @@ class QuickShift(BaseEstimator):
 
     def __init__(
         self,
-        dist_cutoff_sq: Union[float, None] = None,
-        gabriel_shell: Union[int, None] = None,
+        dist_cutoff_sq: Optional[float] = None,
+        gabriel_shell: Optional[int] = None,
         scale: float = 1.0,
-        metric: Callable[
-            [ArrayLike, ArrayLike, bool, dict], ArrayLike
-        ] = periodic_pairwise_euclidean_distances,
-        metric_params: Union[dict, None] = None,
+        metric: Optional[Callable] = None,
+        metric_params: Optional[dict] = None,
     ):
         if (dist_cutoff_sq is None) and (gabriel_shell is None):
             raise ValueError("Either dist_cutoff or gabriel_depth must be set.")
@@ -115,6 +112,10 @@ class QuickShift(BaseEstimator):
         self.metric_params = (
             metric_params if metric_params is not None else {"cell_length": None}
         )
+
+        if metric is None:
+            metric = periodic_pairwise_euclidean_distances
+
         self.metric = lambda X, Y: metric(X, Y, squared=True, **self.metric_params)
         if isinstance(self.metric_params, dict):
             self.cell = self.metric_params["cell_length"]
